--- a/Text_preprocessing.ipynb
+++ b/Text_preprocessing.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgK0SVomCIr5MfykaGAM8g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,9 +70,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pu-rW_Hlno0k",
-        "outputId": "42bb9d7b-028c-483b-a0ad-958a4378567d"
+        "outputId": "cf1711b8-93aa-4226-ede1-78fb9a42ad81"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,9 +127,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Pk_BcIq_n4NC",
-        "outputId": "a3aa71bb-7691-4fe9-c99c-e68dd8f086d6"
+        "outputId": "36b29e97-252f-42d1-9264-86e8680961f8"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -165,9 +164,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9EE40BonpL-p",
-        "outputId": "329f73e4-a941-4df9-864b-73bd7b4f5231"
+        "outputId": "a06eb243-4c53-4e99-e08a-6814c55e271f"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -203,9 +202,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qAlV8lqKpzhv",
-        "outputId": "25ae1ccb-90d9-4d9f-8e92-b2df7fd7a6f7"
+        "outputId": "9f5d6c78-3e19-4cea-c364-15e17510c4fb"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,9 +232,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "grUAvt6Ksj2C",
-        "outputId": "dcdbfc88-be2e-497d-c7a2-af2d4676f9b7"
+        "outputId": "3c07180a-eeda-46f5-dc00-27d41dc7d349"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -263,9 +262,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kLUielygs8ni",
-        "outputId": "c07e8bb0-4f25-490b-b95f-2fd1c75795e2"
+        "outputId": "8afea081-18fb-4b05-d4f4-f8b46bca085a"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -293,9 +292,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "i7d4puU_tBu8",
-        "outputId": "b22a9031-2056-49a3-8f74-83610a99ae59"
+        "outputId": "ffa3b443-5b09-4698-a9d1-9f9bb6afae3c"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -323,9 +322,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qzykHDYTtp7Z",
-        "outputId": "96df18dd-0755-4a13-e275-59da57790d8e"
+        "outputId": "16df9e4a-2ef6-4a7a-f181-3ef42b5a6b16"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -370,9 +369,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "953f3443-8fbf-4a63-c959-339525890225"
+        "outputId": "ab3e2ec5-8d26-42f5-ba55-5129781b7853"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -430,9 +429,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7VHuBkFB1BwS",
-        "outputId": "74904373-ac27-4f33-f825-62b14510e7e2"
+        "outputId": "a333e555-9a73-4c1f-b8b0-4dc34921a2e5"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -467,9 +466,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AmsRO6nL1Msl",
-        "outputId": "295f47b9-da04-4fb7-dcb4-2b76e112f45e"
+        "outputId": "f021a9cc-41a5-49f8-a923-86f58cd48676"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -492,12 +491,119 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from nltk.corpus import wordnet\n",
+        "\n",
+        "# Step 3: Function to map NLTK POS tags to WordNet POS tags\n",
+        "def get_wordnet_pos(tag):\n",
+        "    if tag.startswith('J'):\n",
+        "        return wordnet.ADJ\n",
+        "    elif tag.startswith('V'):\n",
+        "        return wordnet.VERB\n",
+        "    elif tag.startswith('N'):\n",
+        "        return wordnet.NOUN\n",
+        "    elif tag.startswith('R'):\n",
+        "        return wordnet.ADV\n",
+        "    else:\n",
+        "        return wordnet.NOUN # Default to noun\n",
+        "\n",
+        "mapped_tags = [(word, get_wordnet_pos(tag)) for word, tag in pos_tags]\n",
+        "print(f\"Mapped Tags: {mapped_tags}\")\n"
+      ],
       "metadata": {
-        "id": "7Ar_NHKyBBtz"
+        "id": "7Ar_NHKyBBtz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "46a85ab8-990b-4369-d7c6-f28811bb69a8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mapped Tags: [('The', 'n'), ('striped', 'a'), ('bats', 'n'), ('are', 'v'), ('hanging', 'v'), ('on', 'n'), ('their', 'n'), ('feet', 'n'), ('for', 'n'), ('a', 'n'), ('meeting', 'n')]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Step 4: Dictionary Lookup (Lemmatization)\n",
+        "\n",
+        "The WordNetLemmatizer compares the token and its POS tag against the WordNet Lexical Database to return the standard lemma."
+      ],
+      "metadata": {
+        "id": "o6M_EZOTsINl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from nltk.stem import WordNetLemmatizer\n",
+        "nltk.download('wordnet')\n",
+        "nltk.download('omw-1.4')"
+      ],
+      "metadata": {
+        "id": "QZz5EbvJsAtq",
+        "outputId": "5838f6ce-c7c3-458c-af53-672aca7f09ee",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Final Lemmatization Results:\n",
+            "The striped bat be hang on their foot for a meeting\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
+            "[nltk_data]   Package wordnet is already up-to-date!\n",
+            "[nltk_data] Downloading package omw-1.4 to /root/nltk_data...\n",
+            "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lemmatizer = WordNetLemmatizer()\n",
+        "\n",
+        "# Step 4: Final Lemmatization using the dictionary lookup\n",
+        "lemmatized_output = [lemmatizer.lemmatize(word, pos) for word, pos in mapped_tags]\n",
+        "\n",
+        "print(\"Final Lemmatization Results:\")\n",
+        "print(\" \".join(lemmatized_output))"
+      ],
+      "metadata": {
+        "id": "9dNAhr-TsDmB",
+        "outputId": "7e49ae84-4ec7-4575-f483-ed670d4d840e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Final Lemmatization Results:\n",
+            "The striped bat be hang on their foot for a meeting\n"
+          ]
+        }
+      ]
     }
   ]
 }
