--- a/Text_preprocessing.ipynb
+++ b/Text_preprocessing.ipynb
@@ -70,25 +70,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pu-rW_Hlno0k",
-        "outputId": "cf1711b8-93aa-4226-ede1-78fb9a42ad81"
+        "outputId": "cfdbd817-aeb4-4b0b-b480-80b5bec055f7"
       },
-      "execution_count": 1,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n",
             "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt_tab.zip.\n",
+            "[nltk_data]   Package punkt_tab is already up-to-date!\n",
             "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
+            "[nltk_data]   Package wordnet is already up-to-date!\n",
             "[nltk_data] Downloading package omw-1.4 to /root/nltk_data...\n",
+            "[nltk_data]   Package omw-1.4 is already up-to-date!\n",
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
             "[nltk_data]   Package punkt is already up-to-date!\n",
             "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
             "[nltk_data]     /root/nltk_data...\n",
-            "[nltk_data]   Unzipping taggers/averaged_perceptron_tagger.zip.\n"
+            "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
+            "[nltk_data]       date!\n"
           ]
         },
         {
@@ -99,7 +102,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 21
         }
       ]
     },
@@ -127,9 +130,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Pk_BcIq_n4NC",
-        "outputId": "36b29e97-252f-42d1-9264-86e8680961f8"
+        "outputId": "a2b81c29-e439-4947-aeed-4b48b7538f66"
       },
-      "execution_count": 2,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,9 +167,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9EE40BonpL-p",
-        "outputId": "a06eb243-4c53-4e99-e08a-6814c55e271f"
+        "outputId": "fc934e1b-a8b6-4f58-fbef-d4dfd1b31f7d"
       },
-      "execution_count": 3,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -202,9 +205,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qAlV8lqKpzhv",
-        "outputId": "9f5d6c78-3e19-4cea-c364-15e17510c4fb"
+        "outputId": "fbf49ec7-f1a9-4369-96e3-737da32e4f45"
       },
-      "execution_count": 4,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,6 +217,28 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Stemming\n",
+        "\n",
+        "Stemming is a rule-based text normalization technique used in Natural Language Processing to reduce words to their root form or base form, known as a \"stem.\"\n"
+      ],
+      "metadata": {
+        "id": "lTlg7s8N1V3Y"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Porter Stemmer\n",
+        "\n",
+        "The Porter Stemmer is the oldest and most commonly used stemming algorithm. It applies a series of five phases of word reduction rules."
+      ],
+      "metadata": {
+        "id": "oWhe64n20mGW"
+      }
     },
     {
       "cell_type": "code",
@@ -232,9 +257,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "grUAvt6Ksj2C",
-        "outputId": "3c07180a-eeda-46f5-dc00-27d41dc7d349"
+        "outputId": "bac149d2-511a-4bef-a4ce-a1f17229aee3"
       },
-      "execution_count": 5,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,13 +271,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Snowball Stemmer\n",
+        "\n",
+        "\n",
+        "The Snowball Stemmer is an improvement over the original Porter Stemmer. It is more computationally efficient and supports multiple languages."
+      ],
+      "metadata": {
+        "id": "fog-6jjn0qgr"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from nltk.stem import SnowballStemmer\n",
         "\n",
         "stemmer = SnowballStemmer(\"english\")\n",
         "\n",
-        "words = [\"running\", \"runs\", \"easily\", \"fairly\"]\n",
         "stemmed_words = [stemmer.stem(word) for word in words]\n",
         "\n",
         "print(stemmed_words)\n"
@@ -262,18 +298,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kLUielygs8ni",
-        "outputId": "8afea081-18fb-4b05-d4f4-f8b46bca085a"
+        "outputId": "68c96e51-badb-471c-d6d9-099ac48b07e5"
       },
-      "execution_count": 6,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['run', 'run', 'easili', 'fair']\n"
+            "['play', 'play', 'play', 'easili', 'fair']\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Lancaster Stemmer\n",
+        "\n",
+        "The Lancaster Stemmer is the most aggressive . It uses a very large set of rules and often \"over-stems,\" meaning it reduces words to very short, unintuitive roots."
+      ],
+      "metadata": {
+        "id": "-u7h3XB409DE"
+      }
     },
     {
       "cell_type": "code",
@@ -282,7 +329,6 @@
         "\n",
         "stemmer = LancasterStemmer()\n",
         "\n",
-        "words = [\"running\", \"runs\", \"easily\", \"fairly\"]\n",
         "stemmed_words = [stemmer.stem(word) for word in words]\n",
         "\n",
         "print(stemmed_words)\n"
@@ -292,18 +338,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "i7d4puU_tBu8",
-        "outputId": "ffa3b443-5b09-4698-a9d1-9f9bb6afae3c"
+        "outputId": "9b80339f-a3af-4320-b240-73e7c3289584"
       },
-      "execution_count": 7,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['run', 'run', 'easy', 'fair']\n"
+            "['play', 'play', 'play', 'easy', 'fair']\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Regexp Stemmer\n",
+        "\n",
+        "\n",
+        "The Regexp Stemmer (Regular Expression Stemmer) allows you to define your own custom rules for suffix removal."
+      ],
+      "metadata": {
+        "id": "oqzFf_Fs1LPM"
+      }
     },
     {
       "cell_type": "code",
@@ -312,7 +370,6 @@
         "\n",
         "stemmer = RegexpStemmer('ing$|s$|ed$')\n",
         "\n",
-        "words = [\"playing\", \"played\", \"plays\"]\n",
         "stemmed_words = [stemmer.stem(word) for word in words]\n",
         "\n",
         "print(stemmed_words)\n"
@@ -322,15 +379,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qzykHDYTtp7Z",
-        "outputId": "16df9e4a-2ef6-4a7a-f181-3ef42b5a6b16"
+        "outputId": "6d2d31d9-c685-4079-8492-6ff00242531f"
       },
-      "execution_count": 8,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['play', 'play', 'play']\n"
+            "['play', 'play', 'play', 'easily', 'fairly']\n"
           ]
         }
       ]
@@ -365,44 +422,10 @@
         "nltk.download('averaged_perceptron_tagger_eng')"
       ],
       "metadata": {
-        "id": "LV8UakA2yZCA",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "ab3e2ec5-8d26-42f5-ba55-5129781b7853"
+        "id": "LV8UakA2yZCA"
       },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt is already up-to-date!\n",
-            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
-            "[nltk_data]   Package wordnet is already up-to-date!\n",
-            "[nltk_data] Downloading package omw-1.4 to /root/nltk_data...\n",
-            "[nltk_data]   Package omw-1.4 is already up-to-date!\n",
-            "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
-            "[nltk_data]     /root/nltk_data...\n",
-            "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
-            "[nltk_data]       date!\n",
-            "[nltk_data] Downloading package averaged_perceptron_tagger_eng to\n",
-            "[nltk_data]     /root/nltk_data...\n",
-            "[nltk_data]   Unzipping taggers/averaged_perceptron_tagger_eng.zip.\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 9
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -429,9 +452,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7VHuBkFB1BwS",
-        "outputId": "a333e555-9a73-4c1f-b8b0-4dc34921a2e5"
+        "outputId": "d2c5fe15-009d-42e2-8b49-84f5d8f02172"
       },
-      "execution_count": 10,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -466,9 +489,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AmsRO6nL1Msl",
-        "outputId": "f021a9cc-41a5-49f8-a923-86f58cd48676"
+        "outputId": "8d24c22a-bd55-462f-a7b4-7f97118856cd"
       },
-      "execution_count": 11,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -515,9 +538,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "46a85ab8-990b-4369-d7c6-f28811bb69a8"
+        "outputId": "a2fa3f6d-0118-415e-8971-42c787d50643"
       },
-      "execution_count": 12,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -547,22 +570,14 @@
         "nltk.download('omw-1.4')"
       ],
       "metadata": {
-        "id": "QZz5EbvJsAtq",
-        "outputId": "5838f6ce-c7c3-458c-af53-672aca7f09ee",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Final Lemmatization Results:\n",
-            "The striped bat be hang on their foot for a meeting\n"
-          ]
         },
+        "id": "QZz5EbvJsAtq",
+        "outputId": "0675a703-70ee-40d7-eae2-65c4acc4d54e"
+      },
+      "execution_count": 32,
+      "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
@@ -572,6 +587,16 @@
             "[nltk_data] Downloading package omw-1.4 to /root/nltk_data...\n",
             "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
         }
       ]
     },
@@ -583,24 +608,173 @@
         "# Step 4: Final Lemmatization using the dictionary lookup\n",
         "lemmatized_output = [lemmatizer.lemmatize(word, pos) for word, pos in mapped_tags]\n",
         "\n",
+        "print(  f\"Original Text: {text}\")\n",
         "print(\"Final Lemmatization Results:\")\n",
-        "print(\" \".join(lemmatized_output))"
+        "print(\" \".join(lemmatized_output))\n"
       ],
       "metadata": {
-        "id": "9dNAhr-TsDmB",
-        "outputId": "7e49ae84-4ec7-4575-f483-ed670d4d840e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9dNAhr-TsDmB",
+        "outputId": "45e24cc6-e0f8-4ada-b998-beaddcde88e3"
       },
-      "execution_count": 16,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Original Text: The striped bats are hanging on their feet for a meeting\n",
             "Final Lemmatization Results:\n",
             "The striped bat be hang on their foot for a meeting\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Stop Word Removal"
+      ],
+      "metadata": {
+        "id": "gAUD6Y0yzPPt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Stop-word removal is a text preprocessing step in Natural Language Processing (NLP) that eliminates common, less meaningful words (like \"the,\" \"a,\" \"is,\" \"in\") to focus analysis on significant terms"
+      ],
+      "metadata": {
+        "id": "O_bK7sAkzWLA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import nltk\n",
+        "from nltk.corpus import stopwords\n",
+        "from nltk.tokenize import word_tokenize\n",
+        "\n",
+        "# Step 1: Download required NLTK resources\n",
+        "nltk.download('stopwords')\n",
+        "nltk.download('punkt')\n",
+        "nltk.download('punkt_tab')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TqybvXYJzW6a",
+        "outputId": "6a39337c-2d2a-43a0-bbe7-fe21404cc337"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n",
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n",
+            "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt_tab is already up-to-date!\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Step 2: Load English stop words and convert to a set for speed\n",
+        "stop_words = set(stopwords.words('english'))\n",
+        "\n",
+        "print(f\"Total NLTK English stop words: {len(stop_words)}\")\n",
+        "print(stop_words)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gXPmQNn-zjdx",
+        "outputId": "51e81df7-b13e-4797-bbb8-d784fd6b3a6c"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Total NLTK English stop words: 198\n",
+            "{'for', 'an', 'few', 'hers', \"hasn't\", 'his', 'than', 'to', \"they'll\", \"don't\", \"haven't\", 'most', 'won', 'her', 'own', 'm', 'hadn', \"they'd\", 'very', 'll', 'theirs', 'too', 'through', 'needn', 'why', \"you've\", 'doing', 'be', \"it'd\", \"we'd\", 'i', 'by', 'mustn', 'their', 'she', 'up', \"she'll\", 'both', 'same', 'which', 'above', \"isn't\", 'once', 'had', \"we'll\", 'but', 'are', 'on', \"hadn't\", 'that', \"couldn't\", 'some', \"she'd\", 'against', 'myself', 'then', 'when', \"won't\", 'do', \"they're\", 'now', 'any', 'mightn', 'after', 'and', 'over', 'here', 'didn', 'how', 'under', 'couldn', \"didn't\", 'into', 'weren', 'd', \"they've\", \"she's\", 'don', 'me', 'has', 'again', \"i'm\", 'will', 'being', 'it', 'those', \"needn't\", 'only', \"he's\", 'can', 'off', 'they', 're', 'where', 'yourself', 'until', 'during', \"we're\", 'if', 'yours', \"i've\", \"we've\", 'other', 'who', 'themselves', \"you'd\", 'what', 'with', \"mightn't\", 'further', \"shan't\", 'isn', 'more', 'this', 'should', \"you'll\", \"i'll\", 'were', 'out', 'the', 'each', \"it's\", 'was', 'from', 'doesn', \"he'll\", 'himself', 'before', \"doesn't\", 'its', 'because', 'just', 'ourselves', 'shan', 'there', 'is', 'have', 'at', 'all', \"shouldn't\", 'such', 'your', 'hasn', 'no', 'down', 'or', \"mustn't\", 'ma', 'while', 'itself', \"aren't\", 'o', 'wasn', 'my', 'herself', \"that'll\", \"wouldn't\", 'did', 'them', \"he'd\", 'yourselves', 'whom', 'you', 's', 'having', 'wouldn', 'nor', 'between', 'am', 'not', 'shouldn', 'so', 'our', \"should've\", \"you're\", 'ain', 'does', 'we', 'haven', 'in', 'these', 'about', \"wasn't\", 'of', 'a', 'him', 'ours', \"i'd\", 'y', 't', 'he', \"weren't\", 'aren', 've', \"it'll\", 'below', 'as', 'been'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Step 3: Define a sample sentence and tokenize it\n",
+        "text = \"This is a sample sentence showing how to remove stop words from a piece of text.\"\n",
+        "tokens = word_tokenize(text)\n",
+        "\n",
+        "print(f\"Original Tokens: {tokens}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RSFJI5Atzrfl",
+        "outputId": "17e50447-2274-4940-d0db-9d98efabaeda"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original Tokens: ['This', 'is', 'a', 'sample', 'sentence', 'showing', 'how', 'to', 'remove', 'stop', 'words', 'from', 'a', 'piece', 'of', 'text', '.']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Step 4: Remove stop words using list comprehension\n",
+        "# Note: words are converted to .lower() for matching\n",
+        "filtered_text = [w for w in tokens if w.lower() not in stop_words]\n",
+        "\n",
+        "print(\"Original Text:\", tokens)\n",
+        "print(\"Filtered Text (Stop-words removed):\", filtered_text)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ku3UeQ2qzu_0",
+        "outputId": "7d95403a-e21b-406d-93d2-57b958fda261"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original Text: ['This', 'is', 'a', 'sample', 'sentence', 'showing', 'how', 'to', 'remove', 'stop', 'words', 'from', 'a', 'piece', 'of', 'text', '.']\n",
+            "Filtered Text (Stop-words removed): ['sample', 'sentence', 'showing', 'remove', 'stop', 'words', 'piece', 'text', '.']\n"
           ]
         }
       ]
