--- a/Text_preprocessing.ipynb
+++ b/Text_preprocessing.ipynb
@@ -70,9 +70,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pu-rW_Hlno0k",
-        "outputId": "cfdbd817-aeb4-4b0b-b480-80b5bec055f7"
+        "outputId": "1911078d-7c13-45e2-8b1e-97df5ae5f153"
       },
-      "execution_count": 21,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -102,7 +102,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 39
         }
       ]
     },
@@ -130,9 +130,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Pk_BcIq_n4NC",
-        "outputId": "a2b81c29-e439-4947-aeed-4b48b7538f66"
+        "outputId": "bc028fc3-a32b-49e2-c001-104193f1bc24"
       },
-      "execution_count": 22,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -167,9 +167,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9EE40BonpL-p",
-        "outputId": "fc934e1b-a8b6-4f58-fbef-d4dfd1b31f7d"
+        "outputId": "6202ebcb-1173-415d-9dc4-ad0c2bcab054"
       },
-      "execution_count": 23,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -205,9 +205,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qAlV8lqKpzhv",
-        "outputId": "fbf49ec7-f1a9-4369-96e3-737da32e4f45"
+        "outputId": "cc01dbbd-8a2e-412c-db15-e221c8c97ad7"
       },
-      "execution_count": 24,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -257,9 +257,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "grUAvt6Ksj2C",
-        "outputId": "bac149d2-511a-4bef-a4ce-a1f17229aee3"
+        "outputId": "e8a5560e-bb87-499a-9cf6-b74aed7cdacc"
       },
-      "execution_count": 25,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -298,9 +298,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kLUielygs8ni",
-        "outputId": "68c96e51-badb-471c-d6d9-099ac48b07e5"
+        "outputId": "2af67747-c3c6-41f4-8ddf-14e2e8bb2e25"
       },
-      "execution_count": 26,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -338,9 +338,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "i7d4puU_tBu8",
-        "outputId": "9b80339f-a3af-4320-b240-73e7c3289584"
+        "outputId": "b40b71d4-eb7b-47d6-de4a-5437c4ec8884"
       },
-      "execution_count": 27,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -379,9 +379,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qzykHDYTtp7Z",
-        "outputId": "6d2d31d9-c685-4079-8492-6ff00242531f"
+        "outputId": "518c7687-1f8e-48e3-e371-11c6930d25c1"
       },
-      "execution_count": 28,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -422,10 +422,45 @@
         "nltk.download('averaged_perceptron_tagger_eng')"
       ],
       "metadata": {
-        "id": "LV8UakA2yZCA"
+        "id": "LV8UakA2yZCA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5d2be43e-cb4d-44a3-c0e9-3196ebf64a5f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n",
+            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
+            "[nltk_data]   Package wordnet is already up-to-date!\n",
+            "[nltk_data] Downloading package omw-1.4 to /root/nltk_data...\n",
+            "[nltk_data]   Package omw-1.4 is already up-to-date!\n",
+            "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+            "[nltk_data]     /root/nltk_data...\n",
+            "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
+            "[nltk_data]       date!\n",
+            "[nltk_data] Downloading package averaged_perceptron_tagger_eng to\n",
+            "[nltk_data]     /root/nltk_data...\n",
+            "[nltk_data]   Package averaged_perceptron_tagger_eng is already up-to-\n",
+            "[nltk_data]       date!\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -452,9 +487,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7VHuBkFB1BwS",
-        "outputId": "d2c5fe15-009d-42e2-8b49-84f5d8f02172"
+        "outputId": "f5fdfd5b-97c7-4eda-e629-ef5a10115178"
       },
-      "execution_count": 29,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
@@ -489,9 +524,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AmsRO6nL1Msl",
-        "outputId": "8d24c22a-bd55-462f-a7b4-7f97118856cd"
+        "outputId": "145db46e-bc22-496d-89be-32bebbd435a1"
       },
-      "execution_count": 30,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -538,9 +573,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a2fa3f6d-0118-415e-8971-42c787d50643"
+        "outputId": "ae7bea73-eadf-4c8e-854d-f2739d9d3eab"
       },
-      "execution_count": 31,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -574,9 +609,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QZz5EbvJsAtq",
-        "outputId": "0675a703-70ee-40d7-eae2-65c4acc4d54e"
+        "outputId": "11ac5fc8-3b6f-4d2d-85a5-f0c5de67bac7"
       },
-      "execution_count": 32,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
@@ -596,7 +631,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 51
         }
       ]
     },
@@ -617,9 +652,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9dNAhr-TsDmB",
-        "outputId": "45e24cc6-e0f8-4ada-b998-beaddcde88e3"
+        "outputId": "446f6d7f-2b59-4aee-c5ba-29ab465eec4a"
       },
-      "execution_count": 34,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -667,9 +702,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TqybvXYJzW6a",
-        "outputId": "6a39337c-2d2a-43a0-bbe7-fe21404cc337"
+        "outputId": "d4fe095e-0925-4777-b478-5bec81c13be8"
       },
-      "execution_count": 35,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -691,7 +726,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 53
         }
       ]
     },
@@ -709,9 +744,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gXPmQNn-zjdx",
-        "outputId": "51e81df7-b13e-4797-bbb8-d784fd6b3a6c"
+        "outputId": "6da203ff-74c4-4d26-c8d9-5e7c12f3ef54"
       },
-      "execution_count": 36,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
@@ -737,9 +772,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RSFJI5Atzrfl",
-        "outputId": "17e50447-2274-4940-d0db-9d98efabaeda"
+        "outputId": "7fbed90e-fad5-403f-fc20-b7a91bc1ac8d"
       },
-      "execution_count": 37,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
@@ -765,9 +800,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ku3UeQ2qzu_0",
-        "outputId": "7d95403a-e21b-406d-93d2-57b958fda261"
+        "outputId": "789ddb05-8308-4e54-f9c1-f5ac80b8ce65"
       },
-      "execution_count": 38,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
@@ -778,6 +813,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "vobmofLD2x6P"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
